# treasure-hunt

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  session.rs
core/src/clues/: arrangement.rs  mod.rs  on_disk.rs  status.rs
core/src/session/: id.rs  mod.rs  serialization.rs
server/: Cargo.toml
server/html/: about.html  answer_form.html  complete.html  hint_form.html  leaderboard.html  register.html  register_form.html  skip_form.html  template.html
server/src/: config.rs  main.rs  state.rs
server/src/routes/: about.rs  answer.rs  clues.rs  hint.rs  leaderboard.rs  login.rs  mod.rs  register.rs  skip.rs
server/src/state/: mod.rs  serialization.rs  writer.rs
server/src/state/command/: answer.rs  current_clue.rs  hint.rs  leader_board.rs  mod.rs  new_session.rs
